edition = "2023";

package a;

message Message {
  Message normal = 1;
  Message delimited = 2 [features.message_encoding=DELIMITED];
  Message normal_b = 3;
  Message delimited_b = 4 [features.message_encoding=DELIMITED];

  extensions 100 to 1000;

  extend Message {
    string str = 100;
    Message msg = 101;
    uint32 uint32 = 102;
  }
}

extend Message {
  string str = 200;
  Message msg = 201;
  uint32 uint32 = 202;
}
